@@ -9,33 +9,35 @@ plugins {
     id 'groovy'
     id 'java'
     id 'pl.allegro.tech.build.axion-release' version '1.18.17'
+    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
 }
 
-group = 'com.rundeck.plugin'
+group = 'org.rundeck.plugins'
+
+ext.publishName = "PagerDuty Notification ${project.version}"
+ext.githubSlug = 'rundeck-plugins/pagerduty-notification'
+ext.developers = [
+        [id: 'gschueler', name: 'Greg Schueler', email: 'greg@rundeck.com']
+]
+
+scmVersion {
+    ignoreUncommittedChanges = false
+    tag {
+        prefix = ''           // NO "v" prefix - see PLUGIN_TAGGING_ARCHITECTURE.md
+        versionSeparator = ''
+    }
+    versionCreator 'simple'  // Use simple version creator (just tag name)
+}
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
+        languageVersion = JavaLanguageVersion.of(17)
     }
+    withSourcesJar()
+    withJavadocJar()
 }
 
-scmVersion {
-    ignoreUncommittedChanges = true
-    tag {
-        prefix = ''
-        versionSeparator = ''
-        deserializer { config, position, tagName ->
-            def orig = tagName
-            //append .0 to satisfy semver if the tag version is only X.Y
-            if (orig.split('\\.').length < 3) {
-                orig += ".0"
-            }
-            orig
-        }
-    }
-}
-
-project.version = scmVersion.version
+version = scmVersion.version  // Dynamic version from git tag
 
 configurations{
     //declare custom pluginLibs configuration to include only libs for this plugin
@@ -49,17 +51,37 @@ configurations{
 
 
 repositories {
+    mavenLocal()
+    maven {
+        name = 'Central Portal Snapshots'
+        url = 'https://central.sonatype.com/repository/maven-snapshots/'
+        content {
+            includeGroup('org.rundeck')
+        }
+    }
+    maven {
+        name = 'Central Portal Snapshots'
+        url = 'https://central.sonatype.com/repository/maven-snapshots/'
+        
+        // Only search this repository for org.rundeck snapshots
+        content {
+            includeGroup('org.rundeck')
+        }
+    }
     mavenCentral()
 }
 
 dependencies {
 
-    implementation 'org.apache.groovy:groovy-all:4.0.22'
-    implementation(group:'org.rundeck', name: 'rundeck-core', version: '5.15.0-20250902') {
+    implementation 'org.apache.groovy:groovy-all:4.0.29'
+    compileOnly(group:'org.rundeck', name: 'rundeck-core', version: '6.0.0-alpha1-20260407') {
+        exclude group: 'commons-lang', module: 'commons-lang'
+    }
+    testImplementation(group:'org.rundeck', name: 'rundeck-core', version: '6.0.0-alpha1-20260407') {
         exclude group: 'commons-lang', module: 'commons-lang'
     }
     // Add secure replacement for excluded commons-lang
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
+    implementation 'org.apache.commons:commons-lang3:3.20.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
 
     pluginLibs 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -108,3 +130,25 @@ jar {
 //set jar task to depend on copyToLib
 jar.dependsOn(copyToLib)
 
+test {
+    useJUnitPlatform()
+    
+    // Java 17+ module access
+    jvmArgs = [
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+    ]
+}
+
+nexusPublishing {
+    packageGroup = 'org.rundeck.plugins'
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
+        }
+    }
+}
+
+apply from: "${rootDir}/gradle/publishing.gradle"
